fixing z-index of navbar

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,8 +1,12 @@
+.navbar {
+  z-index: 1;
+}
+
 .notifications {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1001;
+  z-index: 2;
 }
 
 .notifications .alert {
